# Job-Hunt

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  storage.py
frontend/: README.md  package-lock.json
frontend/src/app/: applications-context.tsx  globals.css  layout.tsx  page.tsx  providers.tsx  theme-context.tsx
frontend/src/app/api/[...path]/: route.ts
